--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <!-- Provide a link to your resume -->
           </br>
           <a href="#contact" class="btn btn--pink">Get in touch</a>
-          <a href="#contact" class="btn btn--pink">Resume</a>
+          <a href="https://drive.google.com/file/d/1YcLLO1YzEwm4ftfekkSuGaI12uMNwa1G/view?usp=sharing" class="btn btn--pink">Resume</a>
         </div>
 
         <div class="about__photo-container">
@@ -93,7 +93,7 @@
                 </br>
                 <strong> <em> CGPA: 3.83 </em></strong>
               </p>
-
+              </br>
               <h3>NIT Durgapur (WB, India)</h3>
               <p>
                 <strong>Bachelor of Technology, Electronics and Communication Engineering</strong>
@@ -124,7 +124,7 @@
                   </br>
                   <em>May 2022 - Aug 2022</em>
                   </br>
-                  <a href="https://www.dropbox.com/home?preview=SunandaSaha_Resume.pdf" target="_blank" class="link__text">
+                  <a href="https://drive.google.com/file/d/1YcLLO1YzEwm4ftfekkSuGaI12uMNwa1G/view?usp=sharing" target="_blank" class="link__text">
                     <strong> <em> More Details <span>&rarr;</span> </em></strong>
                   </a>
                 </p>
@@ -144,7 +144,7 @@
                   </br>
                   <em>Jul 2019 - Aug 2021</em>
                   </br>
-                  <a href="https://www.dropbox.com/home?preview=SunandaSaha_Resume.pdf" target="_blank" class="link__text">
+                  <a href="https://drive.google.com/file/d/1YcLLO1YzEwm4ftfekkSuGaI12uMNwa1G/view?usp=sharing" target="_blank" class="link__text">
                     <strong> <em> More Details <span>&rarr;</span> </em></strong>
                   </a>
                 </p>
