--- a/index.html
+++ b/index.html
@@ -291,6 +291,24 @@
 
           <div class="work__box">
             <div class="work__text">
+              <h3>Resilitix Digital Twin (TAMU)</h3>
+              <p>
+                Developed an application displaying evacuation routes during a calamity thereby aiding distressed victims. It integrates with an open source geospatial analysis tool specifically designed for large-scale datasets.
+              </p>
+              <ul class="work__list">
+                <li>AWS</li>
+                <li>Spring</li>
+                <li>Python</li>
+                <li>kepler.gl</li>
+              </ul>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/P9.jpeg" class="work__image" alt="Project 9" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
               <h3>Social Media Integration Portal (WIPRO)</h3>
               <p>
                 Developed an application to decrease registration time on an online portal by including social media integration. It also maintains a database of user choices to help facilitate suggestions for logged in users.
