--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               </ul>
             </div>
             <div class="work__image-box">
-              <img src="./images/P9.jpeg" class="work__image" alt="Project 9" />
+              <img src="./images/P9.png" class="work__image" alt="Project 9" />
             </div>
           </div>
 
